= Changelog

This page describes the changes that have been made to *scoped_search* over its history.

Please add an entry to the "Unreleased changes" section in your pull requests.

=== Unreleased changes

=== Version 4.1.10

- Fix querying through associations in Rails 6.1 (undefined method join_keys) (#201)
- Fix query generation when going through STI associations (#211)
- Properly support Ruby 3
- Add support for postgres citext type

=== Version 4.1.9
- Fix querying on nested has-many associations (#196)
- Abide "has_many ..., primary_key" overrides in relation searches

=== Version 4.1.8

- Fix querying in associations by set, datetime or IN searches
- Add support for ActiveRecord 6.0 and Rails 6.1

=== Version 4.1.7

- When Active Support is available, we parse time respecting current time zone
- Allow dots in rename definitions
- Accept extra value_filter in `complete_for`

=== Version 4.1.6

- Support for UUID columns on PostgreSQL (#184)
- Allow value mapping on runtime to allow queries like "user = current" (#183)

=== Version 4.1.5

- Bugfix related to auto-completion of virtual fields (#182)

=== Version 4.1.4

- Bugfix related to LIKE queries on virtual fields (#178)
- Add an "onClear" option to scopedSearch (#176)

=== Version 4.1.3

- Bugfix related to default fields for sets when using ext_method (#174)
- Improved error reporting for exceptions raised in ext_method (#173)
- Bugfix related to validtions of values used with :in operator (#171)

=== Version 4.1.2

- Bugfix related to using polymorphic relations introduced in 4.1.1 (#170)

=== Version 4.1.1

- Bugfix related to quoting when building autocomplete queries for date fields (#167)
- Bugfix related to using polymorphic relations (#168)

=== Version 4.1.0

- Add support for ActiveRecord and ActionView 5.1
- Add support for Ruby 2.4
- Support calling `search_for` on an STI subclass, returning only records of the
  subclass type. (#112)