@@ -1,122 +1,0 @@
-language: ruby
-cache: bundler
-sudo: false
-services:
-  - postgresql
-  - mysql
-
-install:
-- bundle install
-before_script:
-- psql -c 'create database scoped_search_test;' -U postgres
-- mysql -e 'create database scoped_search_test;'
-script:
-- bundle exec rake
-
-rvm:
-- "2.0"
-- "2.1"
-- "2.2.2"
-- "2.3.7"
-- "2.4.0"
-- "2.5.1"
-- "2.6.0"
-- "2.7.1"
-- "3.0.2"
-- ruby-head
-- jruby-19mode
-- jruby-head
-
-gemfile:
-- Gemfile.activerecord42
-- Gemfile.activerecord50
-- Gemfile.activerecord51
-- Gemfile.activerecord52
-- Gemfile.activerecord52_with_activesupport52
-- Gemfile.activerecord60
-- Gemfile.activerecord60_with_activesupport60
-- Gemfile.activerecord61
-- Gemfile.activerecord61_with_activesupport61
-
-matrix:
-  allow_failures:
-    - rvm: ruby-head
-    - rvm: jruby-head
-    - rvm: jruby-19mode
-  exclude:
-    - rvm: "2.0"
-      gemfile: Gemfile.activerecord50
-    - rvm: "2.1"
-      gemfile: Gemfile.activerecord50
-    - rvm: "2.0"
-      gemfile: Gemfile.activerecord51
-    - rvm: "2.1"
-      gemfile: Gemfile.activerecord51
-    - rvm: "2.0"
-      gemfile: Gemfile.activerecord52
-    - rvm: "2.1"
-      gemfile: Gemfile.activerecord52
-    - rvm: "2.0"
-      gemfile: Gemfile.activerecord52_with_activesupport52
-    - rvm: "2.1"
-      gemfile: Gemfile.activerecord52_with_activesupport52
-    - rvm: "2.0"
-      gemfile: Gemfile.activerecord60
-    - rvm: "2.1"
-      gemfile: Gemfile.activerecord60
-    - rvm: "2.2.2"
-      gemfile: Gemfile.activerecord60
-    - rvm: "2.3.7"
-      gemfile: Gemfile.activerecord60
-    - rvm: "2.4.0"
-      gemfile: Gemfile.activerecord60
-    - rvm: "2.0"
-      gemfile: Gemfile.activerecord60_with_activesupport60
-    - rvm: "2.1"
-      gemfile: Gemfile.activerecord60_with_activesupport60
-    - rvm: "2.2.2"
-      gemfile: Gemfile.activerecord60_with_activesupport60
-    - rvm: "2.3.7"
-      gemfile: Gemfile.activerecord60_with_activesupport60
-    - rvm: "2.4.0"
-      gemfile: Gemfile.activerecord60_with_activesupport60
-    - rvm: "2.0"
-      gemfile: Gemfile.activerecord61
-    - rvm: "2.1"
-      gemfile: Gemfile.activerecord61
-    - rvm: "2.2.2"
-      gemfile: Gemfile.activerecord61
-    - rvm: "2.3.7"
-      gemfile: Gemfile.activerecord61
-    - rvm: "2.4.0"
-      gemfile: Gemfile.activerecord61
-    - rvm: "2.0"
-      gemfile: Gemfile.activerecord61_with_activesupport61
-    - rvm: "2.1"
-      gemfile: Gemfile.activerecord61_with_activesupport61
-    - rvm: "2.2.2"
-      gemfile: Gemfile.activerecord61_with_activesupport61
-    - rvm: "2.3.7"
-      gemfile: Gemfile.activerecord61_with_activesupport61
-    - rvm: "2.4.0"
-      gemfile: Gemfile.activerecord61_with_activesupport61
-    - rvm: "2.7.1"
-      gemfile: Gemfile.activerecord42
-    - rvm: "2.7.1"
-      gemfile: Gemfile.activerecord50
-    - rvm: "2.7.1"
-      gemfile: Gemfile.activerecord51
-    - rvm: "2.7.1"
-      gemfile: Gemfile.activerecord52
-    - rvm: "2.7.1"
-      gemfile: Gemfile.activerecord52_with_activesupport52
-    - rvm: "3.0.2"
-      gemfile: Gemfile.activerecord42
-    - rvm: "3.0.2"
-      gemfile: Gemfile.activerecord50
-    - rvm: "3.0.2"
-      gemfile: Gemfile.activerecord51
-    - rvm: "3.0.2"
-      gemfile: Gemfile.activerecord52
-    - rvm: "3.0.2"
-      gemfile: Gemfile.activerecord52_with_activesupport52
