@@ -1,0 +1,17 @@
+source 'https://rubygems.org'
+gemspec
+
+gem 'actionview', '~> 7.1.0'
+gem 'activerecord', '~> 7.1.0'
+
+platforms :jruby do
+  gem 'activerecord-jdbcsqlite3-adapter', '~> 70.0'
+  gem 'activerecord-jdbcmysql-adapter', '~> 70.0'
+  gem 'activerecord-jdbcpostgresql-adapter', '~> 70.0'
+end
+
+platforms :ruby do
+  gem 'sqlite3', '~> 1.4'
+  gem 'mysql2', '> 0.5'
+  gem 'pg', '>= 0.18', '< 2.0'
+end
